Started new Chat service
