# ChatService/src/main/java/com/whatsapp/chat/constants/MessageType.java
@@ -1,0 +1,8 @@
+package com.whatsapp.chat.constants;
+
+public enum MessageType {
+    TEXT,
+    IMAGE,
+    AUDIO,
+    VIDEO
+}
