# ChatService/src/main/java/com/whatsapp/chat/models/ChatResponse.java
@@ -1,0 +1,23 @@
+package com.whatsapp.chat.models;
+
+
+import lombok.*;
+
+import java.time.LocalDateTime;
+
+@Getter
+@Setter
+@AllArgsConstructor
+@NoArgsConstructor
+@Builder
+public class ChatResponse {
+
+    private String id;
+    private String name;
+    private long unreadCount;
+    private String lastMessage;
+    private LocalDateTime lastMessageTime;
+    private boolean isRecipientOnline;
+    private String senderId;
+    private String receiverId;
+}
