# whatsappclone-ui/src/openapi/openapi.json
@@ -1,103 +1,39 @@
 {
   "openapi": "3.1.0",
+  "info": {
+    "title": "OpenAPI definition",
+    "version": "v0"
+  },
   "servers": [
     {
-      "url": "http://localhost:9292",
+      "url": "http://localhost:8282",
       "description": "Generated server url"
     }
   ],
   "paths": {
-    "/api/v1/messages": {
-      "post": {
-        "tags": [
-          "Message"
-        ],
-        "operationId": "saveMessage",
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/MessageRequest"
+    "/api/v1/chats": {
+      "get": {
+        "tags": ["Chat"],
+        "operationId": "getAllChatsByReceiver",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/ChatResponse"
+                  }
+                }
               }
             }
-          },
-          "required": true
-        },
-        "responses": {
-          "201": {
-            "description": "Created"
           }
         }
       },
-      "patch": {
-        "tags": [
-          "Message"
-        ],
-        "operationId": "setMessagesToSeen",
-        "parameters": [
-          {
-            "name": "chat-id",
-            "in": "query",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "202": {
-            "description": "Accepted"
-          }
-        }
-      }
-    },
-    "/api/v1/messages/upload-media": {
       "post": {
-        "tags": [
-          "Message"
-        ],
-        "operationId": "uploadMedia",
-        "parameters": [
-          {
-            "name": "chat-id",
-            "in": "query",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "requestBody": {
-          "content": {
-            "multipart/form-data": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "file": {
-                    "type": "string",
-                    "format": "binary"
-                  }
-                },
-                "required": [
-                  "file"
-                ]
-              }
-            }
-          }
-        },
-        "responses": {
-          "201": {
-            "description": "Created"
-          }
-        }
-      }
-    },
-    "/api/v1/chats": {
-      "post": {
-        "tags": [
-          "Chat"
-        ],
-        "operationId": "createChat",
+        "tags": ["Chat"],
+        "operationId": "createNewChat",
         "parameters": [
           {
             "name": "sender-id",
@@ -129,92 +65,10 @@
           }
         }
       }
-    },
-    "/api/v1/users": {
-      "get": {
-        "tags": [
-          "User"
-        ],
-        "operationId": "getAllUsers",
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/UserResponse"
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/api/v1/messages/chat/{chat-id}": {
-      "get": {
-        "tags": [
-          "Message"
-        ],
-        "operationId": "getMessages",
-        "parameters": [
-          {
-            "name": "chat-id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/MessageResponse"
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
     }
   },
   "components": {
     "schemas": {
-      "MessageRequest": {
-        "type": "object",
-        "properties": {
-          "content": {
-            "type": "string"
-          },
-          "senderId": {
-            "type": "string"
-          },
-          "receiverId": {
-            "type": "string"
-          },
-          "type": {
-            "type": "string",
-            "enum": [
-              "TEXT",
-              "IMAGE",
-              "AUDIO",
-              "VIDEO"
-            ]
-          },
-          "chatId": {
-            "type": "string"
-          }
-        }
-      },
       "StringResponse": {
         "type": "object",
         "properties": {
@@ -223,55 +77,25 @@
           }
         }
       },
-      "UserResponse": {
+      "ChatResponse": {
         "type": "object",
         "properties": {
           "id": {
             "type": "string"
           },
-          "firstName": {
+          "name": {
             "type": "string"
           },
-          "lastName": {
-            "type": "string"
-          },
-          "email": {
-            "type": "string"
-          },
-          "lastSeen": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "online": {
-            "type": "boolean"
-          }
-        }
-      },
-      "MessageResponse": {
-        "type": "object",
-        "properties": {
-          "id": {
+          "unreadCount": {
             "type": "integer",
             "format": "int64"
           },
-          "content": {
+          "lastMessage": {
             "type": "string"
           },
-          "type": {
+          "lastMessageTime": {
             "type": "string",
-            "enum": [
-              "TEXT",
-              "IMAGE",
-              "AUDIO",
-              "VIDEO"
-            ]
-          },
-          "state": {
-            "type": "string",
-            "enum": [
-              "SENT",
-              "SEEN"
-            ]
+            "format": "date-time"
           },
           "senderId": {
             "type": "string"
@@ -279,13 +103,8 @@
           "receiverId": {
             "type": "string"
           },
-          "createdAt": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "media": {
-            "type": "string",
-            "format": "byte"
+          "recipientOnline": {
+            "type": "boolean"
           }
         }
       }
@@ -300,9 +119,7 @@
           "password": {
             "authorizationUrl": "http://localhost:9090/realms/whatsapp-clone/protocol/openid-connect/auth",
             "tokenUrl": "http://localhost:9090/realms/whatsapp-clone/protocol/openid-connect/token",
-            "scopes": {
-
-            }
+            "scopes": {}
           }
         }
       }
